--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/matter-js": "^0.19.8",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -30,5 +31,8 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.0",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"matter-js": "^0.20.0"
 	}
 }
